<resources>
    <string name="app_name">StoryApp</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_preview">Image Preview</string>
    <string name="description_placeholder">Description</string>
    <string name="add_story">Upload</string>
    <string name="image_detail">Image Detail</string>
    <string name="description_detail">Description :</string>
    <string name="btn_share">Share</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Log in to start sharing your story with the world.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_to_mystory">Welcome to MyStory!</string>
    <string name="let_s_share_your_story_with_the_world">Let\'s share your story with the world.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="_2023_mystory">© 2023 MyStory</string>
    <string name="please_register_to_start_sharing_your_story_with_the_world">Please register to start sharing your story with the world.</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="story_image">Story Image</string>
    <string name="email_error">Please enter a valid email address!</string>
    <string name="password_error">Password is less than 8 characters!</string>
    <string name="field_empty">This field cannot be empty!</string>
    <string name="login_success">Login successful.</string>
    <string name="login_failed">Login failed.</string>
    <string name="register_success">Registration successful.</string>
    <string name="register_failed">Registration failed.</string>
    <string name="register_exception">Registration failed | Email already registered.</string>
    <string name="upload_success">Upload successful.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="access_camera">Could not access camera!</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="add_page">Add Story</string>
    <string name="detail_page">Story Detail</string>
    <string name="appwidget_text">LIST STORY</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="no_data">NO DATA</string>
    <string name="try_again">Try Again</string>
    <string name="title_activity_maps">Maps Story</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="insert_picture">Please take or enter a picture first!</string>
    <string name="location_not_available">Unable to get location. Please try again later.</string>
    <string name="location_failed">Failed to get location.</string>
    <string name="get_your_location">Get Your Location</string>
</resources>