<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_detail"
            android:transitionName="picture"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:src="@mipmap/ic_launcher" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:transitionName="name"
        style="@style/TextAppearance.Material3.LabelLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="Alexa" />

    <TextView
        android:id="@+id/tv_detail_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:transitionName="createdAt"
        style="@style/TextAppearance.AppCompat.Display4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="Created at: 2022-01-08T06:34:18.598Z" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:textSize="18sp"
        android:text="@string/description_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_created_at" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="Ini Deskripsi"
        tools:targetApi="26" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_share"
        app:icon="@drawable/ic_share"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>